--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,9 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>За Матурата</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/loader.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/nested-mobile-menu.css">
 
     <script
@@ -33,6 +34,7 @@
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,800" rel="stylesheet">
     <link href="https://cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
