Optimised site navigation Fixed font sizes

--- a/administration/public/index.html
+++ b/administration/public/index.html
@@ -12,7 +12,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
 
-    <!--<link rel="icon" type="image/x-icon" sizes="70x81" href="%PUBLIC_URL%/favicon.ico">-->
+    <link rel="icon" type="image/x-icon" sizes="70x81" href="%PUBLIC_URL%/favicon.ico">
 
     <!--
         JAVASCRIPTS
